# fprops

./: .buildinfo  .gitignore  .licenserc.json  CMakeLists.txt  README.md  fluids.html  genindex.html  index.html  install.html  objects.inv  references.html  search.html  searchindex.js
.github/: release.yml
.github/workflows/: build.yml  gh-pages.yml  qa.yml  release.yml
_sources/: install.rst.txt
_sources/classes/: air.rst.txt  ammonia.rst.txt  helmholtz.rst.txt  ideal-gas.rst.txt  nitrogen.rst.txt
_sources/fluids/: air.rst.txt  helium.rst.txt  nitrogen.rst.txt
_sources/python/: example.rst.txt
assets/: co2-states.yml  co2.yml  gen_yml.py  n2.yml  nitrogen.yml.org
classes/: air.html  ammonia.html  carbon-dioxide.html  fluid-properties.html  helium.html  helmholtz.html  ideal-gas.html  methane.html  nitrogen.html  oxygen.html  single-phase-fluid-properties.html  transport-models.html
cmake/: CodeCoverage.cmake  Sanitization.cmake  fprops-config.cmake.in  fpropsConfig.cmake  fpropsConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  fluids.rst  index.rst  install.rst  references.bib  references.rst
docs/classes/: carbon-dioxide.rst  fluid-properties.rst  helium.rst  helmholtz.rst  methane.rst  oxygen.rst  single-phase-fluid-properties.rst  transport-models.rst
docs/fluids/: air.rst  ammonia.rst  carbon-dioxide.rst  methane.rst  oxygen.rst
docs/pyplots/: air.yml  ch4.yml  co2.yml  he.yml  n2.yml  nh3.yml  o2.yml  plot_err.py
docs/python/: example.rst
fluids/: air.html  ammonia.html  carbon-dioxide.html  helium.html  methane.html  nitrogen.html  oxygen.html
include/: Air.h  BrentsMethod.h  CarbonDioxide.h  Constants.h  FluidProperties.h  Helmholtz.h  IdealGas.h  Nitrogen.h  Numerics.h  Props.h  SinglePhaseFluidProperties.h  State.h  TransportModels.h
include/fprops/: Air.h  CarbonDioxide.h  Exception.h  Helium.h  Helmholtz.h  IdealGas.h  InterpolatedFluidProperties.h  Nitrogen.h  Numerics.h  SinglePhaseFluidProperties.h  State.h  TransportModels.h  Utils.h  air.h  ammonia.h  carbon_dioxide.h  exception.h  fprops.h  helium.h  helmholtz.h  ideal_gas.h  interpolated_fluid_properties.h  methane.h  nitrogen.h  oxygen.h  r134a.h  single_phase_fluid_properties.h  transport_models.h  utils.h
python/: CMakeLists.txt  err.py  example.html  pyproject.toml.in  setup.py.in  test.py
python/fprops/: CMakeLists.txt
python/src/: CMakeLists.txt  fprops.cpp  version.h.in
python/src/fprops/: __init__.py  _version.py.in
python/src/pyfprops/: __init__.py
python/tests/: test_air.py  test_co2.py  test_helium.py  test_nitrogen.py
src/: Air.cpp  BrentsMethod.cpp  CMakeLists.txt  CarbonDioxide.cpp  Exception.cpp  FluidProperties.cpp  Helium.cpp  Helmholtz.cpp  IdealGas.cpp  InterpolatedFluidProperties.cpp  Nitrogen.cpp  Numerics.cpp  Props.cpp  SinglePhaseFluidProperties.cpp  State.cpp  Utils.cpp  air.cpp  ammonia.cpp  carbon_dioxide.cpp  fprops.cpp  helium.cpp  helmholtz.cpp  ideal_gas.cpp  interpolated_fluid_properties.cpp  methane.cpp  nitrogen.cpp  numerics.cpp  oxygen.cpp  r134a.cpp  single_phase_fluid_properties.cpp  state.cpp
test/: CMakeLists.txt
test/assets/: grid-1x1.fprops.h5  n2-smol.fprops.h5  wrong-units.fprops.h5
test/src/: Air_test.cpp  CMakeLists.txt  CarbonDioxide_test.cpp  ExceptionTestMacros.h  Helium_test.cpp  Helmholtz_test.cpp  IdealGas_test.cpp  InterpolatedFluidProperties_test.cpp  Nitrogen_test.cpp  Numerics_test.cpp  TransportModels_test.cpp  Utils_test.cpp  air_test.cpp  ammonia_test.cpp  carbon_dioxide_test.cpp  exception_test_macros.h  fprops_test.cpp  helium_test.cpp  helmholtz_test.cpp  ideal_gas_test.cpp  interpolated_fluid_properties_test.cpp  methane_test.cpp  nitrogen_test.cpp  numerics_test.cpp  oxygen_test.cpp  r134a_test.cpp  transport_models_test.cpp  utils_test.cpp
